style.css
/* ... */
/*--------------------------------------------------------------
## Loading animation
--------------------------------------------------------------*/
.loading_animation {
	max-width: 70px;
	max-height: 50px;
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.loading_ball {
	width: 100%;
	height: 100%;
	border-radius: 50%;
	background-color: #eee;

	-webkit-animation: loadingBounce 2000ms linear infinite both;
	animation: loadingBounce 2000ms linear infinite both;
}

.ball_container {
	max-width: 16px;
	width: 100%;
	max-height: 16px;
	height: 100%;
	border-radius: 50%;

	-webkit-animation: loadingYMovement 1000ms linear infinite both;
	animation: loadingYMovement 1000ms linear infinite both;
}

.loading_ball_first, .ball_container_first {
	-webkit-animation-delay: 0ms; /* Safari 4.0 - 8.0 */
	animation-delay: 0ms;
}

.loading_ball_second, .ball_container_second {
	-webkit-animation-delay: 100ms; /* Safari 4.0 - 8.0 */
	animation-delay: 100ms;
}

.loading_ball_third, .ball_container_third {
	-webkit-animation-delay: 200ms; /* Safari 4.0 - 8.0 */
	animation-delay: 200ms;
}











































/*
Theme Name: Nyborg Pedagogikk
Author: Erling Tokheim
Author URI: www.erling.tokheim.no
Version: 0.01
Description: This is an exclusive theme for
Nyborg Pedagogikk with all rights reserved
Licence: Private
*/

/* Says that margins and paddings should be included
   in the total height and width of elements*/
*, *::after, *::before {
	box-sizing: border-box;
}

*::-moz-selection {
	color: #fff;
	background: rgba(20,100,140,0.8);
}

*::selection {
	color: #fff;
	background: rgba(20,100,140,0.8);
}

.clear {
	clear: both;
}


strong {
	font-weight: bold;
}

em {
	font-style: italic;
}

.right {
	float: right;
}

.left {
	float: left;
}

#menuContainer {
}

.menuContainer {
	overflow: visible;
}

.menuContainer2 {
	overflow: visible;
}

#menu_container {
	transition: all 100ms ease-out;
	transform: translateZ(0);
	-webkit-transform: translateZ(0);
}

.menu_container {
	width: 400px;
	height: calc(100vh - 120px);
	background-color: rgba(251,247,243,1);
	padding: 30px;
	position: fixed;
	z-index: 50;
	color: #000;
	left: -400px;

	top: 60px;
	/*left: 400px; -- Set in javascript (100% of this div's width)*/
}

.menu_container2 {
	left: 60px !important;
}

.navMenu {
	list-style: none;
}


#navMenu a {
	color: #000;
	text-decoration: none;
}

#navMenu a:hover {
	color: grey;
}

.sub-menu {
	text-indent: 15px;
}

.frame_container {
	position: fixed;
	z-index: 100;
}

#header {
	width: 100%;
	height: 60px;
	top: 0;
	left: 0;
}

.frame {
	background-color: #fff;
	z-index: 10;

	will-change: transform;
	transform: translateZ(0);

	transition: all 200ms ease-out;
}

.frame_topbot_hidden {
	width: 100%;
	overflow: hidden;

	height: 0%;
}

.frame_lefrig_hidden {
	width: 0%;
	height: 100%;
	pointer-events: none;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.header_fill_visible {
	height: 100%;
	width: 100%;

	pointer-events: initial;
}

.align_pos_bottom {
	position: absolute;
	bottom: 0px;
}

.align_pos_right {
	position: absolute;
	right: 0px;
}

.align_pos_top {
	position: absolute;
	top: 0px;
}

/* White boxes to simluate a frame */
#left_box_margin,
#right_box_margin,
#bottom_box_margin {
	width: 60px;
	height: calc(100%);
}
#right_box_margin {right: 0; top: 0;}
#bottom_box_margin {bottom: 0; height: 60px; width: 100%; left: 0;}
#left_box_margin {left: 0; top: 0;}

#bottom_box_margin {
	text-align: center;
	color: #1f1f1f;
}

#toc_container {
	width: 100%;
	height: 50%;
	top: calc(25%);
	position: relative;
	/*background-color: lightblue;*/
}

#menuButton {
	width: 25px;
	height: 30px;
	/*border: 3px solid grey;*/
	cursor: pointer;
	top: calc(50% - 15px);
	margin: 0 auto;
	position: relative;
	display: none; /*Not yet ready!*/
}

.menuButton_lines {
	width: 100%;
	height: 2px;
	background-color: #000;
	border-radius: 1000px;
	margin: 0 auto;
	margin-top: 7px;
}

.menuButton_lines:first-of-type {
	margin-top: 0;
}

#intro_container {
	height: 100vh;
	position: relative;
	left: -60px;
	top: -60px;
	width: calc(100% + 120px);
}

#intro {
	height: 100%;
	width: 100%;
	overflow: hidden;
	position: fixed;
	top: -50px;
	display: flex;
	justify-content: center;
	align-items: center;

	will-change: transform;
	transform: translateZ(0);
}

.intro_dimmer {
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	background-color: #000;
	pointer-events: none;
	opacity: 0;
	position: absolute;
}

.intro_slideshow, .intro_image {
	width: 100%;
	height: 100%;
	position: absolute;
	opacity: 0;
	left: 0;
	top: 0;

	will-change: transform;
	transform: translateZ(0);
}

.intro_slideshow_hidden {
	display: none;
}

.intro_image {
	opacity: 1;
}

.intro_slideshow img, .intro_image img {
	object-fit: cover;
	height: 100%;
	width: 100%;
}

#intro_txt {
	position: relative;
	display: inline;
	color: #fff;
	/*opacity: .85;*/
	text-align: center;

	will-change: transform;
	transform: translateZ(0);
	max-width: calc(100% - 120px);
	padding: 0 1.5rem;
}

#intro_txt h1, #intro_txt p {
	margin-top: 0;
	margin-bottom: 0;
}

#intro_txt h1 {
	letter-spacing: 0.8rem;
}

#introduksjons_helsing {
	font-style: italic;
	letter-spacing: 3px;
	font-family: 'Libre Baskerville', serif;
}

.intro_cta_wrapper {
	width: 400px;
	background: green;
	height: auto;
	margin: 0 auto;
}

.intro_cta {
	font-family: "proxima-nova" sans-serif;
	letter-spacing: 10;
	text-transform: uppercase;
	font-size: 1rem;
	font-style: normal;
	display: block;
	padding-top: 1rem;
	opacity: .5 !important;
}

.separator {
	width: 2em;
	display: inline-block;
	text-align: center;
}





/*--------------------------------------------------------------
# Feature slider
--------------------------------------------------------------*/
.featured_posts .contain {
	padding: calc(22.5vh - 60px) 0;
	display: flex;
	justify-content: center;
}
/* ... */

